--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next export"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
@@ -16,6 +17,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "framer-motion": "^11.2.4",
     "next": "14.2.1",
+    "next-images": "^1.8.5",
     "react": "^18",
     "react-dom": "^18",
     "react-transition-group": "^4.4.5"
